added Dockerfile and updated .env

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 RUST_LOG=rest_api=debug,actix=debug,diesel_migrations=debug
 DATABASE_URL=postgres://postgres:p0stgres@xdpostgres/employeesrest_api
-HOST=localhost
+HOST=0.0.0.0
 PORT=8086
