--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,8 +6,8 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-actix-web = "2.0"
-actix-rt = "1.0"
+actix-web = "4.3.1"
+actix-rt = "2.8.0"
 chrono = { version = "0.4", features = ["serde"] }
 dotenv = "0.11"
 diesel = { version = "1.4", features = ["postgres", "r2d2", "uuid", "chrono"] }
@@ -21,3 +21,4 @@ serde_json = "1.0"
 r2d2 = "0.8"
 uuid = { version = "0.6", features = ["serde", "v4"] }
 log4rs = "0.10.0"
+skywalking = "0.6.0"
